--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_CONNECT="mongodb://127.0.0.1:27017/test"
+MONGODB_CONNECT="mongodb+srv://rishabh1122003:7HSYX7buFg4AUCVM@cluster0.hbgrud6.mongodb.net/Loop"
