--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGODB_CONNECT="mongodb+srv://rishabh1122003:7HSYX7buFg4AUCVM@cluster0.hbgrud6.mongodb.net/Loop"
+JWT_SECRET="mySecretKey_#Loop$%^&*"
