--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_CONNECT="mongodb+srv://rishabh1122003:7HSYX7buFg4AUCVM@cluster0.hbgrud6.mongodb.net/Loop"
+MONGODB_CONNECT="mongodb+srv://root:root@cluster0.gh3ohkf.mongodb.net/Loop"
 JWT_SECRET="mySecretKey_#Loop$%^&*"
